--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,10 @@ body {
 
 .App {
   max-width: 275px; }
-
-@media (min-width: 415px) {
-  .App {
-    text-align: center;
-    max-width: 400px; } }
+  @media (min-width: 415px) {
+    .App {
+      text-align: center;
+      max-width: 400px; } }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -41,23 +40,20 @@ body {
   justify-content: center;
   justify-content: space-around;
   border: 4px solid #16a9e1; }
-
-.switch a {
-  padding: 5px 38px;
-  font-size: 17px;
-  background: #16a9e1;
-  color: #fff;
-  text-transform: uppercase;
-  text-decoration: none; }
-
-@media (min-width: 415px) {
   .switch a {
-    padding: 10px 60px;
-    font-size: 23px; } }
-
-.switch a:hover {
-  background: #fff;
-  color: #16a9e1; }
+    padding: 5px 38px;
+    font-size: 17px;
+    background: #16a9e1;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none; }
+    @media (min-width: 415px) {
+      .switch a {
+        padding: 10px 60px;
+        font-size: 21px; } }
+    .switch a:hover {
+      background: #fff;
+      color: #16a9e1; }
 
 .social {
   display: flex;
@@ -69,43 +65,99 @@ button {
   border-radius: 10px;
   cursor: pointer;
   border: none; }
-
-button img {
-  height: 35px; }
+  button img {
+    height: 35px; }
 
 .fb {
   background: #475993; }
-
-.fb:hover {
-  background: #5c70b1; }
+  .fb:hover {
+    background: #5c70b1; }
 
 .twitter {
   background: #2aa9e0; }
-
-.twitter:hover {
-  background: #57bbe6; }
+  .twitter:hover {
+    background: #57bbe6; }
 
 .gplus {
   background: #d84b37; }
-
-.gplus:hover {
-  background: #e07162; }
+  .gplus:hover {
+    background: #e07162; }
 
 .orSeperator {
   margin: 40px 0px; }
+  .orSeperator h2 {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px dashed #000;
+    line-height: 0.1em;
+    margin: 10px 0 20px; }
+  .orSeperator h2 span {
+    background: #fff;
+    padding: 12px 8px;
+    border: 1px solid;
+    border-radius: 100%;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: lighter; }
 
-.orSeperator h2 {
+.field {
+  display: block;
+  margin-bottom: 0.5rem; }
+
+label {
+  display: block;
+  font-size: 0.8rem;
+  line-height: 1.4rem;
+  font-weight: 600;
+  color: #9a9a9a; }
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea,
+input:not([type]
+) {
+  appearance: none;
+  border: 1px solid #CDCDCD;
+  font-size: 0.8rem;
+  padding: 0.5rem;
+  width: 100%; }
+  input[type="text"]:focus,
+  input[type="email"]:focus,
+  input[type="password"]:focus,
+  textarea:focus,
+  input:not([type]
+):focus {
+    outline: 2px solid #1695A3; }
+
+select {
+  border-radius: 0;
+  height: 2rem;
+  width: 100%; }
+  select:focus {
+    border: 2px solid #1695A3;
+    outline: none; }
+
+input[type="checkbox"],
+input[type="radio"] {
+  margin-right: 1ch; }
+
+button {
   width: 100%;
-  text-align: center;
-  border-bottom: 1px dashed #000;
-  line-height: 0.1em;
-  margin: 10px 0 20px; }
-
-.orSeperator h2 span {
-  background: #fff;
-  padding: 12px 8px;
-  border: 1px solid;
-  border-radius: 100%;
+  appearance: none;
+  padding: 1rem 2rem;
   text-transform: uppercase;
-  font-size: 20px;
-  font-weight: lighter; }
+  font-size: 0.8rem;
+  background: #16a9e1;
+  color: white;
+  border: none;
+  border-radius: 25px;
+  margin: 0.5rem 0; }
+  button:hover {
+    opacity: 0.8; }
+  button[type="reset"] {
+    color: #1695A3;
+    border: 1px solid #1695A3;
+    background: transparent; }
+  button + button {
+    margin-left: 1rem; }
