--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,14 @@ body {
   display: flex;
   justify-content: center; }
 
+p {
+  font-size: 12px; }
+
+a {
+  color: #16a9e1;
+  text-decoration: none;
+  font-size: 12px; }
+
 #root {
   display: flex;
   justify-content: center;
@@ -52,8 +60,12 @@ body {
         padding: 10px 60px;
         font-size: 21px; } }
     .switch a:hover {
-      background: #fff;
-      color: #16a9e1; }
+      background: #3ebcec;
+      color: #fff; }
+
+.selected {
+  background: #fff !important;
+  color: #16a9e1 !important; }
 
 .social {
   display: flex;
@@ -100,9 +112,19 @@ button {
     font-size: 20px;
     font-weight: lighter; }
 
+form {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 400px; }
+
 .field {
-  display: block;
-  margin-bottom: 0.5rem; }
+  margin-bottom: 0.5rem;
+  width: 100%; }
+
+.field1 {
+  margin-bottom: 0.5rem;
+  width: 50%; }
 
 label {
   display: block;
@@ -111,24 +133,25 @@ label {
   font-weight: 600;
   color: #9a9a9a; }
 
-input[type="text"],
 input[type="email"],
 input[type="password"],
 textarea,
 input:not([type]
 ) {
   appearance: none;
-  border: 1px solid #CDCDCD;
+  width: 95%;
+  border: 1px solid #16a9e1;
   font-size: 0.8rem;
   padding: 0.5rem;
-  width: 100%; }
-  input[type="text"]:focus,
-  input[type="email"]:focus,
-  input[type="password"]:focus,
-  textarea:focus,
-  input:not([type]
-):focus {
-    outline: 2px solid #1695A3; }
+  border-radius: 5px; }
+
+input[type="text"] {
+  appearance: none;
+  width: 90%;
+  border: 1px solid #16a9e1;
+  font-size: 0.8rem;
+  padding: 0.5rem;
+  border-radius: 5px; }
 
 select {
   border-radius: 0;
@@ -142,7 +165,7 @@ input[type="checkbox"],
 input[type="radio"] {
   margin-right: 1ch; }
 
-button {
+.submit {
   width: 100%;
   appearance: none;
   padding: 1rem 2rem;
@@ -153,11 +176,16 @@ button {
   border: none;
   border-radius: 25px;
   margin: 0.5rem 0; }
-  button:hover {
+  .submit:hover {
     opacity: 0.8; }
-  button[type="reset"] {
+  .submit[type="reset"] {
     color: #1695A3;
     border: 1px solid #1695A3;
     background: transparent; }
-  button + button {
+  .submit + button {
     margin-left: 1rem; }
+
+.login-action {
+  width: 100%;
+  display: flex;
+  justify-content: space-between; }
