--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,6 @@ body {
   padding: 0;
   font-family: sans-serif;
   height: 100vh;
-  align-items: center;
   color:$text;
   @include flexcenter;
 }
@@ -42,21 +41,25 @@ a {
   font-size:12px;
 }
 #root{
+  margin-top:20px;
   @include flexcenter;
-  align-items: center;
+
 
 }
 .App {
   max-width: 275px;
+  text-align: center;
   @media(min-width:415px){
-     text-align: center;
     max-width: 400px;
   }
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 100px;
+  height:75px;
+    @media(min-width:415px){
+    animation: App-logo-spin infinite 20s linear;
+    height: 100px;
+  }
 }
 
 .App-header {
@@ -67,37 +70,39 @@ a {
 }
 
 .App-intro {
-  font-size: .97em;
+    font-size: .97em;
     text-transform: uppercase;
     font-weight: bold;
+
 }
 //switch
 .switch {
 
   @include flexcenter;
-  justify-content: space-around;
   border: 4px solid $mainBlue ;
+  background: $white;
 
     a {
-        padding:5px 38px;
-        font-size:17px;
-        background:$mainBlue;
-        color: $white;
+        width: 50%;
+        padding: 5px 0px;
+        font-size: .825em;
+        background: transparent;
+        color: $mainBlue;
         text-transform: uppercase;
         text-decoration: none;
           @media(min-width:415px){
-            padding: 10px 60px;
-            font-size: 21px;
+            padding: 10px 0px;
+            font-size: 1.315em;
           }
           &:hover {
-            background:lighten($mainBlue, 10%);
+            background:lighten($mainBlue, 30%);
             color:$white;
           }
       }
   }
   .selected{
-    background:$white!important;
-    color:$mainBlue!important;
+    background:$mainBlue!important;
+    color:$white!important;
   }
 //social
 .social {
@@ -159,13 +164,12 @@ form {
     //justify-content: space-between;
     max-width: 400px;
 }
+
 .field {
-  margin-bottom: 0.5rem;
-  width:100%;
-}
-.field1{
-  margin-bottom: 0.5rem;
-  width:50%;
+    display: flex;
+    margin-bottom: 0.5rem;
+    width: 100%;
+    justify-content: space-between;
 }
 
 label {
@@ -187,7 +191,7 @@ input:not([type]
 }
 input[type="text"]{
   appearance: none;
-  width: 90%;
+  width: 45%;
   @include textBox;
 }
 
@@ -237,4 +241,13 @@ margin-right: 1ch;
     width: 100%;
     display: flex;
     justify-content: space-between;
+}
+span.min-pass{
+  color:$text;
+  font-size: .9em;
+  &:before{
+    font-family:fontawesome;
+    content:"\f00c";
+    margin-left:5px;
+  }
 }
